add toaster and set login validation

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,7 +1,9 @@
 input.ng-invalid.ng-touched {
     border:1px dotted red;
 }
-
+input.ng-required{
+    border: 1px dotted red;
+}
 .help-block{
     color: red;
 }
