--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -1,4 +1,39 @@
+
 <div style="display: flex;">
     <app-sidebar></app-sidebar>
-    <router-outlet></router-outlet>
+    <div class="right w-100">
+
+        <div id="content-wrapper" class="d-flex flex-column">
+
+            <!-- Main Content -->
+            <div id="content">
+        
+                <!-- Topbar -->
+                <app-header></app-header>
+                <!-- End of Topbar -->
+        
+                <!-- Begin Page Content -->
+                <div class="container-fluid">
+                <router-outlet></router-outlet>
+                </div>
+                <!-- /.container-fluid -->
+        
+            </div>
+            <!-- End of Main Content -->
+        
+            <!-- Footer -->
+            <footer class="sticky-footer bg-white">
+                <div class="container my-auto">
+                    <div class="copyright text-center my-auto">
+                        <span>Copyright © Your Website 2020</span>
+                    </div>
+                </div>
+            </footer>
+            <!-- End of Footer -->
+        
+        </div>
+
+
+        
+    </div>
 </div>
